--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>Default Root Object</h1>
+<h2>You have reached this page in error</h2>
+<p>Go to <a href="https://www.justinlmartin.com">www.justinlmartin.com</a></p>
 
 </body>
 </html>
